# streamlog

./: .gitignore  README.md
.github/: CODEOWNERS
backend/: main.py  pyproject.toml  test.md
backend/db/: db.py  schema.sql  seed_data.sql
backend/routers/: auth.py  testLogRoutes.py  testreport.py
backend/templates/: index.html  login.html  register.html
frontend/: index.html  register.html
project/: .env.example  main.py
project/crud/: favorite.py  movie.py  user_note.py  watch_log.py
project/db/: backup.sql  db.py  schema.sql  seed_data.sql
project/models/: testLogModel.py
project/routers/: auth.py  favorite.py  home.py  movie.py  top_notes.py  user_note.py  watch_log.py  yearly_report.py
project/static/js/: favorite.js  index.js  login.js  note.js  register.js  report_charts.js  search_autocom.js  search_for_note.js  watch_log.js
project/templates/: favorites.html  index.html  list.html  login.html  notes.html  register.html  search_results.html  yearly_query_form.html  yearly_report.html
